# hincha-cup

./: .code-review-graphignore  .cspell.json  .dockerignore  .env.development.example  .env.example  .env.testing.example  .gitignore  .npmrc  ANALYSIS.md  CONTRIBUTING.md  CURRENT_STATE_SNAPSHOT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPLEMENT_TICKET_STATUS.md  MIGRATION_COMPLETION_PLAN.md  Makefile  ORCHESTRATOR_FIX_PLAN.md  ORCHESTRATOR_IMPROVEMENTS_ANALYSIS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  SKILLS_AND_AGENTS_MAP.md  SKILLS_AND_AGENTS_MAP_V2.md  SKILL_CATALOG.md  TEST_RESULTS.md  TEST_SUITE_IMPLEMENTATION.md  UPDATE_GIRA.sh  WORKSHOP_DETERMINISTIC_AGENTS.md  WORKSPACE_COMMANDS.md  docker-compose.production.yml  docker-compose.yml  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  (+10 more)
.claude/: .gitignore  CLAUDE.md  framework-config.json  settings.json
.claude-temp/: CLAUDE_CLI_VERSION_SOLUTION.md  test-ticket-IT-001.md
.code-review-graph/: launcher.json
.husky/: pre-commit  pre-push
ai-agentic-framework/: CHANGELOG.md  QUICKSTART.md  README.md  SKILLS_AND_AGENTS_MAP.md  SKILL_CATALOG.md  settings.json
commands/: create-sdd-ticket.md  create-skill.md  implement-ticket.md
docker/: .env.example  Dockerfile  entrypoint-common.sh
docs/: ADDING_SKILLS.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_CLI_BUNDLING.md  CLAUDE_DIR_LAYOUT.md  CODE_GRAPH.md  CONTEXT_OPTIMIZATION_EXAMPLE.md  CREATE_SDD_TICKET.md  IMPLEMENT_TICKET.md  IMPLEMENT_TICKET_V2_PLAN.md  INITIALIZE_PROJECT.md  LLM_WIKI.md  PILOT_GUIDE.md  PROMPT_CACHING.md  SECURITY.md  SKILL_INTEGRATION_GUIDE.md  (+13 more)
docs-site-content/: installation.md  quickstart.md  troubleshooting.md
orchestration/test/integration/initialize-project/projects/mini-microservices/loadgenerator/: Dockerfile  README.md  locustfile.py  pyproject.toml
orchestration/test/integration/initialize-project/projects/mini-microservices/recommendationservice/: Dockerfile  README.md  conftest.py  pyproject.toml  recommendation_server.py  recommendations.py
orchestration/test/integration/initialize-project/projects/mini-microservices/recommendationservice/tests/: test_recommendation.py
orchestration/test/integration/initialize-project/projects/mini-serverless/functions/python/: .gcloudignore  README.md  conftest.py  main.py  pyproject.toml
orchestration/test/integration/initialize-project/projects/mini-serverless/functions/python/lib/: __init__.py  audit.py
orchestration/test/integration/initialize-project/projects/mini-serverless/functions/python/unit_tests/tests_level0/audit/: test_audit.py
tests/integration/initialize-project/projects/python-fastapi/: .env.example  pyproject.toml
tests/integration/initialize-project/projects/python-fastapi/app/: main.py
tests/integration/initialize-project/projects/python-fastapi/app/core/: security.py
(+2322 files in other folders)
