[project]
name = "recommendationservice"
version = "0.1.0"
requires-python = ">=3.12"

[tool.poetry]
name = "recommendationservice"
version = "0.1.0"
authors = ["Qubika"]
description = "Plan v5 fixture — Online Boutique recommendationservice."

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.65.0"
grpcio-tools = "^1.65.0"
protobuf = "^5.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
