[project]
name = "mini-serverless-functions-python"
version = "0.1.0"
description = "GCP Cloud Functions (Python)."
requires-python = ">=3.12"

[tool.poetry]
name = "mini-serverless-functions-python"
version = "0.1.0"
authors = ["Qubika <noreply@qubika.com>"]
description = "GCP Cloud Functions (Python)."

[tool.poetry.dependencies]
python = "^3.12"
functions-framework = "^3.0.0"
google-cloud-firestore = "^2.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
black = "^24.0.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
python_files = "test_*.py"
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
